--- a/jsobject.html
+++ b/jsobject.html
@@ -26,9 +26,9 @@
       this.showDetail = xyz;
     }
 
-    var anusha = new person("anusha", 21, "whereever");
+    var hero = new person("anusha", 21, "whereever");
 
-    anusha.showDetail();
+    hero.showDetail();
     
     //area of circle
     function area() {
